[package]
name = "dui_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.16.0"
# vello = { git = "https://github.com/linebender/vello.git" }
vello = { path = "../../vello" }
winit = "0.28.3"
pollster = "0.3.0"

dui_core = { path = '../dui_core' }
dui_util = { path = '../dui_util' }
tokio = { version = "1.28.0", features = ["full"] }
wgpu-hal = "0.16.0"
raw-window-handle = "0.5.2"
cocoa = "0.24.1"
